# makeheaders

./: BUILD.bazel  LICENSE  MODULE.bazel  README.adoc  README.md
compilation_mode/: BUILD.bazel
logging/: macros.bzl  macros_debug.h  macros_ndebug.h
rules/: makeheaders.bzl
src/: BUILD.bazel  RULES.bzl
