cc_binary(
    name  = "makeheaders",
    srcs  = ["makeheaders.c"],
    copts = [
        "-x", "c",
        "-O3",
        "-Wno-unused-function"
    ] + select({
        "@platforms//os:linux": ["-std=gnu11"],
        "//conditions:default": ["-std=c11"],
    }),
    linkstatic=1,
    visibility = ["//visibility:public"]
)

