load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name  = "makeheaders",
    srcs  = ["makeheaders.c"],
    copts = [
        "-x", "c",
        "-O3",
        "-Wno-unused-function"
    ] + select({
        "@platforms//os:linux": [
            "-std=gnu11",
            ## strncpy warnings from makeheaders.c
            "-Wno-stringop-overflow",
            "-Wno-stringop-truncation"
        ],
        "//conditions:default": ["-std=c11"],
    }),
    linkopts = select({
        "@platforms//os:macos": ["-Xlinker", "-no_warn_duplicate_libraries"],
        "//conditions:default": []
    }),
    linkstatic=1,
    visibility = ["//visibility:public"]
)

