load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name  = "makeheaders",
    srcs  = ["makeheaders.c"],
    features = ["opt"],
    copts = [
        "-x", "c",
        "-Wno-unused-function"
    ] + select({
        "@platforms//os:linux": [
            "-std=gnu11",
            ## strncpy warnings from makeheaders.c
            "-Wno-stringop-overflow",
            "-Wno-stringop-truncation"
        ],
        "//conditions:default": ["-std=c11"],
    }),
    linkstatic=1,
    visibility = ["//visibility:public"]
)

